# Trominal

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  KICKOFF.md  README.md  SECURITY.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.ai/design/: README.md  Trominal Mobile.html  Trominal.html  design-canvas.jsx  primitives.jsx  screens-auth.jsx  screens-hosts.jsx  screens-mobile.jsx  screens-settings.jsx  screens-system.jsx  screens-terminal.jsx  screens-tools.jsx  tokens.css
.ai/shared/: ARCHITECTURE.md  CODING_RULES.md  PROJECT_BRIEF.md
.ai/skills/: crypto.md  design-reference.md  filament-admin.md  git-workflow.md  laravel-backend.md  tauri-react-client.md  testing.md  website.md
.cursor/rules/: 00-project-core.mdc  10-backend.mdc  15-filament-admin.mdc  20-client.mdc  30-crypto.mdc  40-testing.mdc
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: security.md
.github/workflows/: backend-ci.yml  backend-release.yml  ci.yml  client-ci.yml  client-release.yml  crypto-ci.yml  release.yml  website-deploy.yml
apps/backend/: .env.example  Dockerfile  composer.json  openapi.yaml  package-lock.json  package.json  phpstan.neon
apps/backend/app/Console/Commands/: SshProxyStartCommand.php
apps/backend/app/Filament/Pages/: Settings.php  SystemHealth.php
apps/backend/app/Filament/Widgets/: RecentAudit.php  RecentRegistrations.php  StatsOverview.php
apps/backend/app/Http/Middleware/: EnsureAdminPanelAccess.php  RecordAuditLog.php  (+1 more)
apps/backend/app/Models/: AiSetting.php  AppSetting.php  AuditLog.php  Device.php  Group.php  Host.php  HostCredential.php  Identity.php  Invite.php  RefreshToken.php  Snippet.php  Team.php  TeamMember.php  Tunnel.php  User.php  WsSessionToken.php
apps/backend/app/Policies/: VaultRecordPolicy.php
apps/backend/app/Providers/: AppServiceProvider.php
apps/backend/app/Services/: AuthService.php  TeamService.php
apps/backend/bootstrap/: app.php
apps/backend/config/: auth.php  cors.php  trominal.php
apps/backend/database/factories/: UserFactory.php
apps/backend/database/migrations/: 0001_01_01_000000_create_users_table.php  2026_05_07_000001_create_phase_one_auth_tables.php  2026_05_07_000002_create_vault_tables.php  2026_05_08_000001_add_host_context_to_ws_session_tokens.php  2026_05_08_000002_disable_web_ssh_by_default.php  2026_05_08_000003_create_team_tables.php  2026_05_08_000004_add_team_scope_to_vault_tables.php
apps/backend/database/seeders/: AppSettingSeeder.php  DatabaseSeeder.php  RoleAndPermissionSeeder.php
apps/backend/docker/: entrypoint.sh  php.ini  www.conf
apps/backend/resources/css/: app.css
apps/backend/resources/views/: welcome.blade.php
apps/backend/routes/: api.php  api_v1.php
apps/backend/tests/: Pest.php
apps/client/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/client/src/: App.test.tsx  App.tsx  main.tsx  styles.css
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/icons/: icon.icns
apps/client/src-tauri/src/: event_sink.rs  lib.rs  local_shell.rs  main.rs  secure.rs  sftp.rs
apps/client/src/app/: guards.tsx  providers.tsx  router.tsx
apps/client/src/lib/: api-client.ts  cn.test.ts  cn.ts  config.ts  idle.ts  platform.ts  secure-storage.ts  updater.ts
apps/client/src/stores/: appearance.test.ts  appearance.ts  auth.test.ts  auth.ts  terminal.ts  vault.test.ts  vault.ts
apps/client/tests/e2e/: app.spec.ts
crates/trominal-core/: Cargo.toml
crates/trominal-core/src/: event.rs  lib.rs  pty.rs  types.rs
crates/trominal-helper/: Cargo.toml
crates/trominal-helper/src/: main.rs
docker/: Caddyfile  docker-compose.dev.yml
docker/env/: backend.env.example
docs/: ADMIN_GUIDE.md  ARCHITECTURE.md  RELEASE.md  SECURITY.md  SELF_HOSTING.md
website/: .gitignore  .prettierignore  README.md  astro.config.mjs  package.json  tailwind.config.mjs  tsconfig.json  wrangler.toml
website/design-reference/: chrome.js  contact.html  contribute.html  features.html  index.html  install.html  privacy.html  screenshots.html  site.css
website/public/: robots.txt  site.webmanifest
website/src/: env.d.ts
website/src/components/chrome/: Footer.astro  Header.astro  Icon.astro  LatestVersion.astro  Logo.astro  StarCount.astro
website/src/components/home/: AppShowcase.astro  BuiltInTheOpen.astro  CTA.astro  Hero.astro  InstallTease.astro  WhyGrid.astro
website/src/layouts/: Base.astro  Docs.astro  Page.astro
website/src/lib/: docs.ts  format.ts  github.ts  markdown.ts  site.ts
website/src/pages/: brand.astro  changelog.astro  contact.astro  contribute.astro  demo.astro  features.astro  index.astro  install.astro  license.astro  privacy.astro  roadmap.astro  screenshots.astro  security.astro  sitemap.xml.ts  terms.astro
website/src/pages/api/: stats.json.ts
website/src/pages/docs/: [slug].astro  index.astro
website/src/styles/: global.css
(+170 files in other folders)
