[package]
name = "trominal-client"
version = "0.1.0"
description = "Trominal desktop client"
authors = ["ArmendIdeas"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "trominal_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Secure storage backed by the OS keychain (macOS Keychain / Windows Credential
# Manager / Linux Secret Service). Pinned to 3.x because 4.x makes the Error
# enum private. Explicit features pick the per-platform native backend.
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
thiserror = "2"
