[package]
name = "trominal-client"
description = "Trominal desktop client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "trominal_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"

# Secure storage backed by the OS keychain (macOS Keychain / Windows Credential
# Manager / Linux Secret Service). Pinned to 3.x because 4.x makes the Error
# enum private. Explicit features pick the per-platform native backend.
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
thiserror = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
